tests/paczka1/fuzzy1/97446107.err
Error in line 1: aacDvBMjDH A885 90,3
Error in line 2: jkv A885 69,7
Error in line 9: jkv A994 359,4
Error in line 19: jkv S554 56,1
Error in line 24: jkv A994 43,8
Error in line 27: Djbj5oyeaz A885 8,7
Error in line 25: jkv A885 39,5
Error in line 31: jkv A979 23,5
Error in line 39: Djbj5oyeaz A994  0, 
